--- a/ProjetEnchereENI/WebContent/WEB-INF/web.xml
+++ b/ProjetEnchereENI/WebContent/WEB-INF/web.xml
@@ -12,4 +12,7 @@
 		<servlet-name>ServletGerantLesVentes</servlet-name>
 		<url-pattern>ServletGerantLesVentes</url-pattern>
 	</servlet-mapping>
+	 <welcome-file-list>
+        <welcome-file>Vente.jsp</welcome-file>
+        </welcome-file-list>
 </web-app>
